update swagger generes
